feat: implemented type adapters and also fixes a lot of bugs in new EJson library